--- a/telebazz-sender-src/src/scenes/message_page/MessagePage.css
+++ b/telebazz-sender-src/src/scenes/message_page/MessagePage.css
@@ -47,3 +47,20 @@ input[type="color"]::-webkit-color-swatch {
   position: absolute;
   bottom: 0;
 }
+
+#color-picker{
+  background-image: url('../../images/color-picker.png');
+}
+
+.colors-container{
+  padding:10% 10%;
+  display: -webkit-inline-box;
+}
+
+.colors{
+  width: -webkit-fill-available;
+}
+
+#color{
+  margin-left: 2%;
+}
