--- a/telebazz-sender-src/src/scenes/icon_page/IconPage.css
+++ b/telebazz-sender-src/src/scenes/icon_page/IconPage.css
@@ -27,7 +27,7 @@
     border: 1px solid rgb(0, 0, 0);
     border-radius: 10%;
     width: 100%;
-    height: 400px;
+    height: 50vh;
     overflow: auto;
     align-items: center;
     padding: 0% 5%;
