--- a/telebazz-sender-src/src/scenes/message_page/MessagePage.css
+++ b/telebazz-sender-src/src/scenes/message_page/MessagePage.css
@@ -1,5 +1,5 @@
 .container {
-  padding:10% 10%;
+  padding: 7% 10% 7% 10%;
   text-align: right !important;
 }
 
@@ -50,7 +50,6 @@ input[type="color"]::-webkit-color-swatch {
   border-radius: 50%;
 }
 
-/**/
 #color-picker-img {
   height: 25px;
   width: 25px;
@@ -87,7 +86,6 @@ input[type="color"]::-webkit-color-swatch {
 ::-moz-focus-inner {
   padding: 0;
 }
-/**/
 
 /* #color-picker{
   background-image: url('../../images/color-picker.jpg');
@@ -107,14 +105,7 @@ input[type="color"]::-webkit-color-swatch {
 #color{
   margin-left: 2%;
 }
-/* 
-.add-to-favorites{
-  position: relative;
-  width: 100%;
-  background-color: #4CAF50;
-  border: none;
-  color: #FFFFFF;
-  padding: 8px;
-  text-align: center;
-  cursor: pointer;
-} */
+
+.add-to-favorites-lable {
+  margin-top: 3.5%;
+}
