--- a/telebazz-sender-src/src/scenes/home_page/HomePage.css
+++ b/telebazz-sender-src/src/scenes/home_page/HomePage.css
@@ -2,6 +2,12 @@
     margin-top: 4%;
 }
 
-.dropdown-ctrl-message {
+#dropdownMenuButton {
     margin-top: 28%;
+}
+
+.dropdown-message-menu {
+    direction: ltr;
+    background-color: blue; 
+    position: fixed;
 }
