made dropdown contex menu for filtering the icons

--- a/telebazz-sender-src/src/scenes/home_page/HomePage.css
+++ b/telebazz-sender-src/src/scenes/home_page/HomePage.css
@@ -2,12 +2,11 @@
     margin-top: 4%;
 }
 
-#dropdownMenuButton {
+#dropdownMessageCtrl {
     margin-top: 28%;
 }
 
 .dropdown-message-menu {
-    direction: ltr;
     background-color: blue; 
     position: fixed;
 }
