--- a/telebazz-sender-src/src/scenes/home_page/HomePage.css
+++ b/telebazz-sender-src/src/scenes/home_page/HomePage.css
@@ -10,3 +10,9 @@
     background-color: blue; 
     position: fixed;
 }
+
+.main-title-messages {
+    text-align: center;
+    margin-top: 5%;
+    margin-bottom: 3%;
+}
