--- a/telebazz-sender-src/src/scenes/home_page/HomePage.css
+++ b/telebazz-sender-src/src/scenes/home_page/HomePage.css
@@ -15,4 +15,19 @@
     text-align: center;
     margin-top: 5%;
     margin-bottom: 3%;
+    font-weight: bold;
+}
+
+.new-message-btn {
+    background-color: #48b72e;
+    border-radius: 50%;
+    border: none;
+    color: white;
+    padding: 10%;
+    text-align: center;
+    font-size: 10vw;
+    margin: 20% auto;
+    cursor: pointer;
+    display: flex;
+    /* justify-content: center; */
 }
