--- a/telebazz-sender-src/src/scenes/send_page/SendPage.css
+++ b/telebazz-sender-src/src/scenes/send_page/SendPage.css
@@ -4,7 +4,7 @@
     padding-bottom: 3%;
 }
 
-#message-text {
+#send-message-text {
     display: flex;
     justify-content: center;
     padding-top: 3%;
