--- a/telebazz-sender-src/src/scenes/send_page/SendPage.css
+++ b/telebazz-sender-src/src/scenes/send_page/SendPage.css
@@ -15,6 +15,8 @@
     margin-bottom: 15%;
 }
 
+/* Morse.js */
+
 .loading-spinner {
     font-size: 30vw;
     color: rgb(40, 185, 173);
@@ -24,4 +26,9 @@
 
 .fa-spin {
     animation: fa-spin 5s infinite linear;
+}
+
+.message-status {
+    text-align: center;
+    margin: 15%;
 }
