change tone to audiocontext

--- a/telebazz-sender-src/src/scenes/icon_page/IconPage.css
+++ b/telebazz-sender-src/src/scenes/icon_page/IconPage.css
@@ -63,3 +63,9 @@
     margin-top: 6%;
     margin-bottom: 0%;
 }
+
+@media screen and (min-width: 576px) {
+    .btn-secondary.dropdown-toggle {
+        width: 15vw;
+    }
+  }
