--- a/telebazz-sender-src/src/scenes/message_page/MessagePage.css
+++ b/telebazz-sender-src/src/scenes/message_page/MessagePage.css
@@ -4,8 +4,8 @@
 }
 
 .btn-circle {
-  width: 25px;
-  height: 25px;
+  width: 7.5vw;
+  height: 7.5vw;
   padding: 6px 0px;
   margin: 1%;
   border-radius: 50%;
@@ -51,8 +51,8 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 #color-picker-img {
-  height: 25px;
-  width: 25px;
+  width: 7.5vw;
+  height: 7.5vw;
   object-fit: cover;
   position: absolute;
 }
@@ -63,9 +63,9 @@ input[type="color"]::-webkit-color-swatch {
   border: none; 
   /* makes input (color swatch) 100% size of container */
   /* position: absolute; */
-  width: 25px; 
-  height: 25px;
-  mix-blend-mode: hue;
+  width: 7.5vw;
+  height: 7.5vw;
+  mix-blend-mode: difference;
   cursor: pointer;
 }
 
@@ -100,6 +100,8 @@ input[type="color"]::-webkit-color-swatch {
 
 #color{
   margin-left: 2%;
+  width: 7.5vw;
+  height: 7.5vw;
 }
 
 .add-to-favorites-lable {
@@ -107,12 +109,20 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .color-picker-container{
-  width: 25px;
-  height: 25px;
+  width: 7.5vw;
+  height: 7.5vw;
 }
 
 @media only screen and (max-height: 320px) {
   .submit-message-button {
     visibility: hidden;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .container {
+    padding: 7%;
+    text-align: right !important;
+    max-width: none;
   }
 }
