--- a/telebazz-sender-src/src/scenes/home_page/HomePage.css
+++ b/telebazz-sender-src/src/scenes/home_page/HomePage.css
@@ -1,7 +1,8 @@
 .message-text {
-    width: 60vw;
+    width: 80vw;
     word-wrap: break-word;
     margin-bottom: 0% !important;
+    margin-left: 10.8%;
 }
 
 .message-container {
@@ -10,12 +11,14 @@
 
 .dropdown-message-menu {
     background-color: rgb(255, 255, 255);
-    position: absolute;
-    z-index: 1;
     width: 40vw;
     border: 1px solid rgb(218, 210, 210);
     border-radius: 2%;
     left: 1.25rem;
+    position: absolute;
+    z-index: 3;
+    margin-top: -4.3%;
+    margin-right: 34.7%;
 }
 
 .main-title-messages {
@@ -39,6 +42,17 @@
     /* justify-content: center; */
 }
 
+#bottom-new-message-btn{
+    z-index: 2;
+}
+
 .dropdown-msg-control-item {
     padding: 4%;   
+}
+
+#msg-ctrl-btn {
+    position: absolute;
+    z-index: 1;
+    margin-top: -15%;
+    margin-right: 34.7%;
 }
