--- a/telebazz-sender-src/src/scenes/home_page/HomePage.css
+++ b/telebazz-sender-src/src/scenes/home_page/HomePage.css
@@ -39,7 +39,6 @@
     margin: 20% auto;
     cursor: pointer;
     display: flex;
-    /* justify-content: center; */
 }
 
 #bottom-new-message-btn{
@@ -53,6 +52,9 @@
 #msg-ctrl-btn {
     position: absolute;
     z-index: 1;
-    margin-top: -15%;
+    /* margin-top: -15%; */
+    margin-top: -3.5rem;
     margin-right: 34.7%;
+    width: fit-content;
+    height: auto;
 }
