--- a/telebazz-sender-src/src/scenes/send_page/SendPage.css
+++ b/telebazz-sender-src/src/scenes/send_page/SendPage.css
@@ -8,6 +8,11 @@
     display: flex;
     justify-content: center;
     padding-top: 3%;
+    width: 80%;
+    word-break: break-all;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
 }
 
 .message-info-container {
